--- a/app.json
+++ b/app.json
@@ -49,6 +49,11 @@
         "pages/goOrder/goOrder",
         "pages/protocol/protocol"
       ]
+    },{
+      "root": "pages/order/",
+      "pages": [
+        "pages/orderInfo/orderInfo"
+      ]
     }
   ]
 }
