--- a/app.json
+++ b/app.json
@@ -53,7 +53,8 @@
     {
       "root": "pages/order/",
       "pages": [
-        "pages/orderInfo/orderInfo"
+        "pages/orderInfo/orderInfo",
+        "pages/map/map"
       ]
     },
     {
