--- a/app.json
+++ b/app.json
@@ -72,5 +72,10 @@
         "idea/idea"
       ]
     }
-  ]
+  ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  }
 }
