--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#03a9f4",
     "navigationBarTitleText": "煜阳商配",
-    "navigationBarTextStyle": "light"
+    "navigationBarTextStyle": "black"
   },
   "tabBar": {
     "color": "#7A7E83",
@@ -77,5 +77,6 @@
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
